# Milk-Converter

./: .gitignore  3dragons.frag  3dragons.milk  3dragonz.frag  CHANGELOG.md  CMakeLists.txt  MilkdropConverter.cpp  README.md  TODO.md  WaveModeRenderer.cpp  WaveModeRenderer.hpp  clean_test.frag  complex_test.frag  complex_test.milk  milk-authoring-guide.md  per_pixel.frag  raymarch_instructions.md  test.frag  test.frag.generated  test.milk  wavecode.frag
tests/: README.md  regression_baked.py  regression_shader_spec.py  regression_wave_modes.py
tests/golden/: baked_per_pixel.glsl
tests/presets/: unsupported_wave_mode.milk  wave_mode_0.milk  wave_mode_0_dense.milk  wave_mode_2.milk  wave_mode_3.milk  wave_mode_4.milk  wave_mode_5.milk  wave_mode_6.milk  wave_mode_6_dense.milk  wave_mode_7.milk  wave_mode_8.milk  wave_mode_8_stress.milk
